--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/storage": "2.0.1",
     "cordova-sqlite-storage": "^2.0.4",
     "ionic-angular": "3.6.0",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
